--- a/app/sass/_nav.scss
+++ b/app/sass/_nav.scss
@@ -262,9 +262,9 @@
 .menu-nav {
 	position: relative;
 	display: inline-block;
-	a[href=""],	a[href="#"] {
-		cursor: default;
-	}
+	//a[href=""],	a[href="#"] {
+	//	cursor: default;
+	//}
 	&-header {
 		display: none;
 		@include lg-block {
